[gd_scene load_steps=24 format=3 uid="uid://cnb7hhc5d748e"]

[ext_resource type="Texture2D" uid="uid://bw8qeg1ny6xsj" path="res://Sprites/Player_metroid.png" id="2_p1x0x"]
[ext_resource type="Script" path="res://Scripts/Entitys_Scripts/Player_Scripts/States_Player/Idle.gd" id="3_eddb0"]
[ext_resource type="Script" path="res://addons/finite_state_machine/scripts/finite_state_machine.gd" id="3_jftfb"]
[ext_resource type="Script" path="res://Scripts/Entitys_Scripts/Player_Scripts/States_Player/Run.gd" id="4_k4fw0"]
[ext_resource type="Script" path="res://Scripts/Entitys_Scripts/Player_Scripts/States_Player/Jump.gd" id="5_joewv"]
[ext_resource type="Script" path="res://Scripts/Entitys_Scripts/Player_Scripts/States_Player/Fall.gd" id="6_bev77"]
[ext_resource type="Script" path="res://Scripts/Entitys_Scripts/Player_Scripts/States_Player/Attack.gd" id="7_060oi"]
[ext_resource type="Script" path="res://Scripts/Entitys_Scripts/Player_Scripts/States_Player/Climb.gd" id="8_8kie6"]
[ext_resource type="Script" path="res://Scripts/Entitys_Scripts/Cores/MovementCore.gd" id="9_cvmch"]
[ext_resource type="Script" path="res://Scripts/Entitys_Scripts/Cores/DealDamageCore.gd" id="10_82vb7"]
[ext_resource type="Script" path="res://Scripts/Entitys_Scripts/Player_Scripts/Weapon/Weapon.gd" id="11_rnlb2"]
[ext_resource type="Script" path="res://Scripts/Entitys_Scripts/Cores/GetDamageCore.gd" id="12_wc0m5"]
[ext_resource type="Script" path="res://Scripts/Entitys_Scripts/Cores/DeathCore.gd" id="14_aos8n"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vv5hg"]
radius = 6.0
height = 24.0

[sub_resource type="Animation" id="Animation_usv4g"]
resource_name = "Attack_sword"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.23, 0.29),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [17, 18, 19, 20]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Cores/DealDamageCore/Weapon_Sword/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.28, 0.29),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, false, true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FiniteStateMachine/Attack")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.29),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [null],
"method": &"on_attack_finish"
}]
}

[sub_resource type="Animation" id="Animation_tmy3q"]
resource_name = "Fall"
length = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [14]
}

[sub_resource type="Animation" id="Animation_mi54a"]
resource_name = "Idle"
length = 0.65
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_ixlfk"]
resource_name = "Jump"
length = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [12, 13]
}

[sub_resource type="Animation" id="Animation_jnu4o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Cores/DealDamageCore/Weapon_Sword/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ic2h0"]
resource_name = "Run"
length = 0.55
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [5, 6, 7, 8, 9, 10]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5uw5r"]
_data = {
"Attack_sword": SubResource("Animation_usv4g"),
"Fall": SubResource("Animation_tmy3q"),
"Idle": SubResource("Animation_mi54a"),
"Jump": SubResource("Animation_ixlfk"),
"RESET": SubResource("Animation_jnu4o"),
"Run": SubResource("Animation_ic2h0")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_44ug3"]
size = Vector2(13, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tr02n"]
size = Vector2(11, 23)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
metadata/_edit_vertical_guides_ = [6.0]

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -7)
texture = ExtResource("2_p1x0x")
hframes = 8
vframes = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("CapsuleShape2D_vv5hg")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5uw5r")
}

[node name="FiniteStateMachine" type="Node" parent="." node_paths=PackedStringArray("current_state", "animation_player")]
script = ExtResource("3_jftfb")
current_state = NodePath("Fall")
animation_player = NodePath("../AnimationPlayer")

[node name="Idle" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("_movement_core", "_deal_damage_core")]
script = ExtResource("3_eddb0")
_movement_core = NodePath("../../Cores/MovementCore")
_deal_damage_core = NodePath("../../Cores/DealDamageCore")

[node name="Run" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("_movement_core", "_deal_damage_core")]
script = ExtResource("4_k4fw0")
_movement_core = NodePath("../../Cores/MovementCore")
_deal_damage_core = NodePath("../../Cores/DealDamageCore")

[node name="Jump" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("_movement_core", "_deal_damage_core")]
script = ExtResource("5_joewv")
_movement_core = NodePath("../../Cores/MovementCore")
_deal_damage_core = NodePath("../../Cores/DealDamageCore")

[node name="Fall" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("_movement_core", "_deal_damage_core")]
script = ExtResource("6_bev77")
_movement_core = NodePath("../../Cores/MovementCore")
_deal_damage_core = NodePath("../../Cores/DealDamageCore")

[node name="Attack" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("_movement_core", "_deal_damage_core")]
script = ExtResource("7_060oi")
_movement_core = NodePath("../../Cores/MovementCore")
_deal_damage_core = NodePath("../../Cores/DealDamageCore")

[node name="Climb" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("_movement_core")]
script = ExtResource("8_8kie6")
_movement_core = NodePath("../../Cores/MovementCore")

[node name="Timer" type="Timer" parent="FiniteStateMachine/Climb"]
one_shot = true

[node name="Cores" type="Node2D" parent="."]

[node name="MovementCore" type="Node2D" parent="Cores" node_paths=PackedStringArray("_entity", "_animationPlayer")]
script = ExtResource("9_cvmch")
max_speed = 190.0
acceleration = 1500.0
jump_force = -140
max_jump_time = 0.15
jump_boost = -13
_entity = NodePath("../..")
_animationPlayer = NodePath("../../AnimationPlayer")

[node name="DealDamageCore" type="Node2D" parent="Cores" node_paths=PackedStringArray("_weapon", "_entity", "_animationPlayer")]
script = ExtResource("10_82vb7")
_weapon = NodePath("Weapon_Sword")
_entity = NodePath("../..")
_animationPlayer = NodePath("../../AnimationPlayer")

[node name="Weapon_Sword" type="Area2D" parent="Cores/DealDamageCore" groups=["Weapons"]]
position = Vector2(-1, 7)
collision_layer = 8
collision_mask = 16
script = ExtResource("11_rnlb2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cores/DealDamageCore/Weapon_Sword"]
position = Vector2(15, -4)
shape = SubResource("RectangleShape2D_44ug3")
debug_color = Color(0.782151, 0.430882, 0.172665, 0.42)

[node name="GetDamageCore" type="Node2D" parent="Cores" node_paths=PackedStringArray("_entity", "_animationPlayer")]
script = ExtResource("12_wc0m5")
_entity = NodePath("../..")
_animationPlayer = NodePath("../../AnimationPlayer")

[node name="HitBox" type="Area2D" parent="Cores/GetDamageCore"]
collision_layer = 16
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cores/GetDamageCore/HitBox"]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_tr02n")
debug_color = Color(0.930342, 0.256059, 0.165255, 0.42)

[node name="DeathCore" type="Node2D" parent="Cores" node_paths=PackedStringArray("_entity", "_animationPlayer")]
script = ExtResource("14_aos8n")
_entity = NodePath("../..")
_animationPlayer = NodePath("../../AnimationPlayer")

[node name="RayCast2DUp" type="RayCast2D" parent="."]
position = Vector2(0, -5)
target_position = Vector2(6.2, 0)
collision_mask = 2

[node name="RayCast2DDown" type="RayCast2D" parent="."]
position = Vector2(0, -4)
target_position = Vector2(6.2, 0)
collision_mask = 2

[connection signal="timeout" from="FiniteStateMachine/Climb/Timer" to="FiniteStateMachine/Climb" method="_on_timer_timeout"]
